- CMake warning cleanup

--- a/android-libs/TouchControls/CMakeLists.txt
+++ b/android-libs/TouchControls/CMakeLists.txt
@@ -1,10 +1,5 @@
 cmake_minimum_required( VERSION 2.8.12 )
 
-include_directories(${SIGCPP_INCLUDE_DIR} ${TINYXML_INCLUDE_DIR} ${LIBPNG_INCLUDE_DIR})
-
-# Add -DUSE_GLES2 for OpenGLES 2
-add_definitions(-DANDROID_NDK)
-
 add_library(touchcontrols SHARED
     Button.cpp
     ControlSuper.cpp
@@ -21,5 +16,10 @@ add_library(touchcontrols SHARED
     WheelSelect.cpp
 )
 
-target_link_libraries(touchcontrols GLESv1_CM log ${TINYXML_LIBRARY} ${SIGCPP_LIBRARY} ${LIBPNG_LIBRARY})
+# Add -DUSE_GLES2 for OpenGLES 2
+target_compile_definitions(touchcontrols PRIVATE -DANDROID_NDK)
+
+target_include_directories(touchcontrols PRIVATE ${SIGCPP_INCLUDE_DIR} ${TINYXML_INCLUDE_DIR} ${LIBPNG_INCLUDE_DIR})
+
+target_link_libraries(touchcontrols PRIVATE GLESv1_CM log ${TINYXML_LIBRARY} ${SIGCPP_LIBRARY} ${LIBPNG_LIBRARY})
  
