--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,7 @@
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
 add_custom_target(revision_check ALL
 	COMMAND updaterevision ${CMAKE_CURRENT_BINARY_DIR}/hginfo.h
 	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
