--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -161,8 +161,10 @@ list(APPEND HEADER_FILES ${CMAKE_CURRENT_BINARY_DIR}/versiondefs.h)
 
 set(SOURCE_FILES
 	g_blake/a_smartanim.cpp
+	g_blake/a_barrier.cpp
 	g_blake/blake_sbar.cpp
 	g_blake/blakeaog_sbar.cpp
+	g_blake/bibendovsky.cpp
 	g_shared/a_armor.cpp
 	g_shared/a_action.cpp
 	g_shared/a_deathcam.cpp
