--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -164,6 +164,7 @@ set(SOURCE_FILES
 	g_blake/blake_sbar.cpp
 	g_shared/a_armor.cpp
 	g_shared/a_action.cpp
+	g_shared/a_ambient.cpp
 	g_shared/a_deathcam.cpp
 	g_shared/a_inventory.cpp
 	g_shared/a_keys.cpp
