squashed merge of bstone branch
This adds core support for blake stone aliens of gold, shareware 3.0.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
@@ -165,7 +165,10 @@ list(APPEND HEADER_FILES ${CMAKE_CURRENT_BINARY_DIR}/versiondefs.h)
 
 set(SOURCE_FILES
 	g_blake/a_smartanim.cpp
+	g_blake/a_barrier.cpp
 	g_blake/blake_sbar.cpp
+	g_blake/blakeaog_sbar.cpp
+	g_blake/bibendovsky.cpp
 	g_shared/a_armor.cpp
 	g_shared/a_action.cpp
 	g_shared/a_ambient.cpp
